// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AccessDenied Component > Snapshot Testing > should have consistent HTML output 1`] = `"<div class="h-[90vh] flex items-center justify-center"><div data-testid="fallback-ui-mock"><div data-testid="fallback-image"><svg data-testid="no-results-icon" aria-label="No results illustration"><title>No Results</title></svg></div><h2 data-testid="fallback-main-message">Access Denied</h2><p data-testid="fallback-description">You do not have permission to access this page.</p></div></div>"`;

exports[`AccessDenied Component > Snapshot Testing > should match snapshot for basic render 1`] = `
<div>
  <div
    class="h-[90vh] flex items-center justify-center"
  >
    <div
      data-testid="fallback-ui-mock"
    >
      <div
        data-testid="fallback-image"
      >
        <svg
          aria-label="No results illustration"
          data-testid="no-results-icon"
        >
          <title>
            No Results
          </title>
        </svg>
      </div>
      <h2
        data-testid="fallback-main-message"
      >
        Access Denied
      </h2>
      <p
        data-testid="fallback-description"
      >
        You do not have permission to access this page.
      </p>
    </div>
  </div>
</div>
`;

exports[`AccessDenied Component > Snapshot Testing > should match snapshot for component structure 1`] = `
<div
  class="h-[90vh] flex items-center justify-center"
>
  <div
    data-testid="fallback-ui-mock"
  >
    <div
      data-testid="fallback-image"
    >
      <svg
        aria-label="No results illustration"
        data-testid="no-results-icon"
      >
        <title>
          No Results
        </title>
      </svg>
    </div>
    <h2
      data-testid="fallback-main-message"
    >
      Access Denied
    </h2>
    <p
      data-testid="fallback-description"
    >
      You do not have permission to access this page.
    </p>
  </div>
</div>
`;
